1998-04-11  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* client.c (client_senddate): Pass SDATEFORM not DATEFORM to
	sscanf.  This fixes a Y2K bug.

	* history.c (history, select_hrec): Change since_date from time_t
	to RCS format.  Use the usual machinery (in particular, Make_Date
	and client_senddate) so that it will work on VMS too.
	* main.c, cvs.h (date_from_time_t): New function.
	* sanity.sh (history): New test, to test that this didn't break
	anything (also tests client_senddate fix).

1998-04-11  Norbert Kiesel  <nk@iname.com>

	* server.c (cvs_output_binary): Shut up "gcc -Wall" by removing
	unnecessary else if test.
	* server.c (check_password): Fix uninitialized memory read if
 	shadow passwords are used.  Also added some comments.
	* rcs.c (RCS_checkout): Make sure to call chown with -1 for uid or 
	gid if they should not be changed

1998-04-10  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* sanity.sh (rcs2): New test, tests for various Y2K cases.
	* rcs.c (getdelta): Value for "state" keyword is optional (bug
	discovered incidentally in writing rcs2 test).

1998-04-09  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* filesubr.c, cvs.h (link_file): Remove; no longer used.

1998-04-08  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* recurse.c (do_dir_proc): Restore update_dir rather than a
	computation which appears to, but does not necessarily, restore it
	(reported by various people; this fix is from Greg Hudson).
	* sanity.sh (importc): New test, tests for this fix.

1998-03-27  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* rcs.c (RCS_lock): If the revision is already locked, give an
	error rather than dumping core.
	* sanity.sh (reserved): New test reserved-13c tests for this.

1998-03-25  Loren J. Rittle

	* import.c (add_rev): Rewrite to use RCS_FLAGS_KEEPFILE option
	of RCS_checkin() to avoid damage to imported files instead of
	externally undoing damage after the fact.  The side effect is
	that callers of add_rev() may now incrementally walk the